# model-ai-skin-match

./: .gitignore  Dockerfile  IngredientAssociationService.py  README.md  ReTrainService.py  RecommendationController.py  SkinTypeClusteringService.py  clean_cosmetic_ingredients.py  ingredient_api.py  kmean.py  model_training.py  pyproject.toml  requirements.txt  train_full_pipeline.py
csv_report/: association_rules.csv
data/: cosmetic_base.csv  cosmetic_update_03_01_2026.csv
model/: association_model.pkl  cluster_profile.pkl
model_output/: cluster_profile.pkl
