[project]
name = "model-ai-skin-match"
version = "1.0.1"
description = "AI Service for Cosmetic Ingredient Association and Skin Type Clustering"

dependencies = [
    "pandas",
    "mlxtend",
    "flask",
    "scikit-learn",
    "matplotlib",
    "numpy",
    "requests",
    "python-dotenv",
    "gunicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]